--- a/package.json
+++ b/package.json
@@ -5,14 +5,23 @@
   "main": "index.js",
   "scripts": {
     "inspect": "nodemon --inspect index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "rabia and segun",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.885.0",
+    "bcrypt": "^5.0.1",
+    "bootstrap-icons": "^1.4.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.1",
+    "file-type": "^16.3.0",
+    "knex": "^0.95.4",
+    "method-override": "^3.0.0",
     "nodemon": "^2.0.7",
     "pg": "^8.5.1"
   }
