--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@ bin-release/
 *.ipa
 *.apk
 
-db
+
 .env
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
-
+db/auth.js
 node_modules
